[package]
name = "rustix-futex-sync"
version = "0.1.2"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "Linux futex-based synchronization"
documentation = "https://docs.rs/rustix-futex-sync"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/rustix-futex-sync"
edition = "2021"
keywords = ["linux", "futex"]
categories = ["concurrency", "os::unix-apis", "no-std"]

[dependencies]
rustix = { version = "0.38.1", default-features = false, features = ["thread", "time"] }
lock_api = { version = "0.4.7", default-features = false }

# Special dependencies used in rustc-dep-of-std mode.
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = '0.1.49', optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
nightly = ["lock_api/nightly"]
atomic_usize = ["lock_api/atomic_usize"]

[package.metadata.docs.rs]
features = ["atomic_usize"]
rustdoc-args = ["--cfg", "doc_cfg"]
